fix: correct spacing in NavMenu component

--- a/src/components/molecules/NavMenu/navmenu.scss
+++ b/src/components/molecules/NavMenu/navmenu.scss
@@ -8,6 +8,10 @@
   align-items: center;
 
   @include for-size(screen-sm) {
+    gap: 2rem;
+  }
+
+  @include for-size(screen-lg) {
     flex-direction: row;
   }
 
@@ -30,7 +34,7 @@
 
     @include for-size(screen-sm) {
       padding: 0;
-      margin: 0.75rem;
+      margin-block: 0.75rem;
       flex-direction: row;
     }
   }
@@ -74,6 +78,7 @@
 .nav-menu--hamburger {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 
   & .nav-menu__menu {
     position: absolute;
